--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,27 @@
 }
 
 
-.song-header {
+
+.App-header {
   background-color: #282c34;
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
+  flex-direction: column;
+  font-size: calc(10px + 2vmin);
   color: white;
 }
 
+.App-body {
+  background-color: wheat;
+}
+
+.App-footer{
+  background-color: #282c34;
+  display: flex;
+  flex-direction: column;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+button{
+  border-radius: 15%;
+}
